@@ -869,6 +869,7 @@ EXPORTS
 	KSI_VerificationRule_CalendarAuthenticationRecordAggregationTime
 	KSI_VerificationRule_SignaturePublicationRecordPublicationHash
 	KSI_VerificationRule_SignaturePublicationRecordPublicationTime
+	KSI_VerificationRule_InputHashAlgorithmVerification
 	KSI_VerificationRule_DocumentHashVerification
 	KSI_VerificationRule_DocumentHashDoesNotExist
 	KSI_VerificationRule_DocumentHashExistence
