@@ -1,3 +1,4 @@
+* IMPROVEMENT: New verification rule for verifing document hash algorithm.
 * IMPROVEMENT: Implemented verification of PKI certificate validity during aggregation time.
 * IMPROVEMENT: Unified verifivation error codes. All error code values with single digit are padded with '0' (general error codes have been changed from GEN-* to GEN-0*).
 * IMPROVEMENT: Refactored TCP client host information lookup by using getaddrinfo instead of gethostbyname.
